// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountStatus renders error status 1`] = `
<div>
  <div
    class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-flex components-card__header components-card-header woocommerce-account-status__header css-1g7xfrj-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        Account details
      </div>
      <div
        class="components-card__body components-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Error determining the connection status.
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`AccountStatus renders normal status 1`] = `
<div>
  <div
    class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-flex components-card__header components-card-header woocommerce-account-status__header css-1g7xfrj-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        <div
          class="components-flex-item account-details css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Account details
        </div>
        <div
          class="components-flex-item components-flex-block account-status css-14wzr73-View-Item-sx-Base-block em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexBlock"
        >
          <span
            class="chip chip-primary is-compact"
          >
            Complete
          </span>
        </div>
        <div
          class="components-flex-item edit-details css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <button
            class="components-button is-link"
            type="button"
          >
            Edit details
          </button>
        </div>
      </div>
      <div
        class="components-card__body components-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="components-flex woocommerce-account-status-item css-h2ogiv-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item item-label css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Payments:
          </div>
          <div
            class="components-flex-item components-flex-block item-value css-14wzr73-View-Item-sx-Base-block em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <span
              class="account-status__info__green"
            >
              <svg
                class="gridicon gridicons-checkmark-circle"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
                  />
                </g>
              </svg>
              Enabled
            </span>
          </div>
        </div>
        <div
          class="components-flex woocommerce-account-status-item css-h2ogiv-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item item-label css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Deposits:
          </div>
          <div
            class="components-flex-item components-flex-block item-value css-14wzr73-View-Item-sx-Base-block em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <span
              class="account-status__info__green"
            >
              <svg
                class="gridicon gridicons-checkmark-circle"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
                  />
                </g>
              </svg>
              Automatic
            </span>
          </div>
        </div>
        <h4>
          Active discounts
        </h4>
        <p>
          Card transactions
          :
        </p>
        Euro 
        (EUR) 
        <s>
          2.9% + 0,00 € per transaction
        </s>
         2.9% + 0,30 € per transaction
        <p>
          <a
            href="https://woocommerce.com/terms-conditions/woocommerce-payments-promotion/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
          </a>
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`StatusChip renders complete status 1`] = `
<div>
  <span
    class="chip chip-primary is-compact"
  >
    Complete
  </span>
</div>
`;

exports[`StatusChip renders partially restricted status 1`] = `
<div>
  <span
    class="chip chip-warning is-compact"
  >
    Restricted partially
  </span>
</div>
`;

exports[`StatusChip renders pending verification status 1`] = `
<div>
  <button
    class="wcpay-tooltip__content-wrapper"
    type="button"
  >
    <div
      class="wcpay-tooltip__content-wrapper"
    >
      <span
        class="chip chip-light is-compact"
      >
        Pending
      </span>
    </div>
  </button>
</div>
`;

exports[`StatusChip renders pending verification status for po 1`] = `
<div>
  <button
    class="wcpay-tooltip__content-wrapper"
    type="button"
  >
    <div
      class="wcpay-tooltip__content-wrapper"
    >
      <span
        class="chip chip-light is-compact"
      >
        Pending
      </span>
    </div>
  </button>
</div>
`;

exports[`StatusChip renders rejected status 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Rejected
  </span>
</div>
`;

exports[`StatusChip renders restricted soon status 1`] = `
<div>
  <span
    class="chip chip-warning is-compact"
  >
    Restricted soon
  </span>
</div>
`;

exports[`StatusChip renders restricted status 1`] = `
<div>
  <span
    class="chip chip-alert is-compact"
  >
    Restricted
  </span>
</div>
`;

exports[`StatusChip renders unknown status 1`] = `
<div>
  <span
    class="chip chip-light is-compact"
  >
    Unknown
  </span>
</div>
`;
